--- a/index.html
+++ b/index.html
@@ -3,48 +3,70 @@
   <head>
     <title>Live GPS Tracker</title>
     <meta charset="utf-8" />
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpKDgr-QRCZLkVW8A0NR9EAxGaWdhySEY"></script>
     <style>
-      html, body, #map {
+      html, body {
         height: 100%;
         margin: 0;
         padding: 0;
       }
+      #map {
+        height: 100%;
+        width: 100%;
+      }
     </style>
+
+    <!-- ✅ Replace YOUR_API_KEY below -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpKDgr-QRCZLkVW8A0NR9EAxGaWdhySEY"></script>
   </head>
   <body>
-    <div id="map"></div>
+    <h1 style="text-align:center;">Live GPS Map Tracker</h1>
+    <div id="map">Loading map...</div>
+
     <script>
+      console.log("📦 Script loaded");
+
       let map, marker;
 
       async function fetchLocation() {
-        const res = await fetch("https://gps-tracker-backend.onrender.com/location");
-        return await res.json(); // expected { lat: number, lng: number }
+        try {
+          // ✅ Replace this with your actual Render backend URL
+          const response = await fetch("https://gps-tracker-backend-3hwt.onrender.com/location");
+          const data = await response.json();
+          console.log("📍 Fetched location:", data);
+          return {
+            lat: parseFloat(data.lat),
+            lng: parseFloat(data.lng)
+          };
+        } catch (err) {
+          console.error("❌ Error fetching location:", err);
+          alert("Failed to fetch location from backend.");
+          return { lat: 0, lng: 0 }; // fallback
+        }
       }
 
       async function initMap() {
-        const { lat, lng } = await fetchLocation();
+        console.log("🧭 Initializing map...");
+        const initialPosition = await fetchLocation();
 
         map = new google.maps.Map(document.getElementById("map"), {
-          center: { lat, lng },
+          center: initialPosition,
           zoom: 15,
         });
 
         marker = new google.maps.Marker({
-          position: { lat, lng },
-          map: map,
-          title: "Current Location"
+          position: initialPosition,
+          map,
+          title: "Current GPS Position"
         });
 
-        // Auto-update every 5 seconds
         setInterval(async () => {
-          const { lat, lng } = await fetchLocation();
-          marker.setPosition({ lat, lng });
-          map.panTo({ lat, lng });
+          const newPos = await fetchLocation();
+          marker.setPosition(newPos);
+          map.panTo(newPos);
         }, 5000);
       }
 
-      initMap();
+      window.onload = initMap;
     </script>
   </body>
 </html>
