--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Live GPS Tracker</title>
+    <title>Live GPS Map</title>
     <meta charset="utf-8" />
     <style>
       html, body {
@@ -15,54 +15,54 @@
       }
     </style>
 
-    <!-- ✅ Replace YOUR_API_KEY below -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpKDgr-QRCZLkVW8A0NR9EAxGaWdhySEY"></script>
+    <!-- ✅ Replace with your real Google Maps API Key -->
+    <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpKDgr-QRCZLkVW8A0NR9EAxGaWdhySEY"></script>
   </head>
   <body>
-    <h1 style="text-align:center;">Live GPS Map Tracker</h1>
     <div id="map">Loading map...</div>
 
     <script>
-      console.log("📦 Script loaded");
+      console.log("✅ JavaScript is running");
 
       let map, marker;
 
       async function fetchLocation() {
         try {
-          // ✅ Replace this with your actual Render backend URL
           const response = await fetch("https://gps-tracker-backend-3hwt.onrender.com/location");
           const data = await response.json();
-          console.log("📍 Fetched location:", data);
+          console.log("📍 Fetched location from backend:", data);
+
           return {
             lat: parseFloat(data.lat),
             lng: parseFloat(data.lng)
           };
         } catch (err) {
-          console.error("❌ Error fetching location:", err);
-          alert("Failed to fetch location from backend.");
-          return { lat: 0, lng: 0 }; // fallback
+          console.error("❌ Failed to fetch location:", err);
+          alert("Could not fetch location from backend.");
+          return { lat: 0, lng: 0 }; // fallback to show the map
         }
       }
 
       async function initMap() {
         console.log("🧭 Initializing map...");
-        const initialPosition = await fetchLocation();
+
+        const initialLocation = await fetchLocation();
 
         map = new google.maps.Map(document.getElementById("map"), {
-          center: initialPosition,
-          zoom: 15,
+          center: initialLocation,
+          zoom: 15
         });
 
         marker = new google.maps.Marker({
-          position: initialPosition,
-          map,
-          title: "Current GPS Position"
+          position: initialLocation,
+          map: map,
+          title: "Current Location"
         });
 
         setInterval(async () => {
-          const newPos = await fetchLocation();
-          marker.setPosition(newPos);
-          map.panTo(newPos);
+          const newLocation = await fetchLocation();
+          marker.setPosition(newLocation);
+          map.panTo(newLocation);
         }, 5000);
       }
 
