--- a/index.html
+++ b/index.html
@@ -15,31 +15,36 @@
       }
     </style>
 
-    <!-- ✅ Replace with your real Google Maps API Key -->
+    <!-- ✅ REPLACE with your actual Google Maps API key -->
     <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpKDgr-QRCZLkVW8A0NR9EAxGaWdhySEY"></script>
   </head>
   <body>
     <div id="map">Loading map...</div>
 
     <script>
-      console.log("✅ JavaScript is running");
+      console.log("✅ JavaScript loaded");
 
       let map, marker;
 
       async function fetchLocation() {
         try {
           const response = await fetch("https://gps-tracker-backend-3hwt.onrender.com/location");
-          const data = await response.json();
-          console.log("📍 Fetched location from backend:", data);
+          console.log("🛰 HTTP response object:", response);
+
+          const text = await response.text();
+          console.log("📦 Raw response text:", text);
+
+          const data = JSON.parse(text);
+          console.log("📍 Parsed JSON:", data);
 
           return {
             lat: parseFloat(data.lat),
             lng: parseFloat(data.lng)
           };
         } catch (err) {
-          console.error("❌ Failed to fetch location:", err);
-          alert("Could not fetch location from backend.");
-          return { lat: 0, lng: 0 }; // fallback to show the map
+          console.error("❌ Error during fetch or parse:", err);
+          alert("Could not fetch or parse location from backend.");
+          return { lat: 0, lng: 0 }; // fallback so map renders
         }
       }
 
@@ -59,6 +64,7 @@
           title: "Current Location"
         });
 
+        // Auto-update every 5 seconds
         setInterval(async () => {
           const newLocation = await fetchLocation();
           marker.setPosition(newLocation);
