--- a/index.html
+++ b/index.html
@@ -28,25 +28,20 @@
 
       async function fetchLocation() {
         try {
-          const response = await fetch("https://gps-tracker-backend-3hwt.onrender.com/location");
-          console.log("🛰 HTTP response object:", response);
-
-          const text = await response.text();
-          console.log("📦 Raw response text:", text);
-
-          const data = JSON.parse(text);
-          console.log("📍 Parsed JSON:", data);
-
-          return {
+            const response = await fetch("https://gps-tracker-backend-3hwt.onrender.com/location");
+            const data = await response.json();
+            console.log("📍 Parsed location:", data);
+            return {
             lat: parseFloat(data.lat),
             lng: parseFloat(data.lng)
-          };
+            };
         } catch (err) {
-          console.error("❌ Error during fetch or parse:", err);
-          alert("Could not fetch or parse location from backend.");
-          return { lat: 0, lng: 0 }; // fallback so map renders
+            console.error("❌ Error during fetch or parse:", err);
+            alert("Could not fetch or parse location from backend.");
+            return { lat: 0, lng: 0 };
         }
-      }
+    }
+
 
       async function initMap() {
         console.log("🧭 Initializing map...");
